// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextareaInput /> with 14 cols 1`] = `
<textarea
  autoComplete="false"
  className="mui-textarea-resize-vert mui-mi-input-field"
  cols={14}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  rows={5}
  value=""
/>
`;

exports[`<TextareaInput /> with 30 rows 1`] = `
<textarea
  autoComplete="false"
  className="mui-textarea-resize-vert mui-mi-input-field"
  cols={15}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  rows={30}
  value=""
/>
`;

exports[`<TextareaInput /> with a required attribute 1`] = `
<textarea
  autoComplete="false"
  className="mui-textarea-resize-vert mui-mi-input-field mui-mi-input-field-has-error"
  cols={15}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  required={true}
  rows={5}
  value=""
/>
`;

exports[`<TextareaInput /> with a string value 1`] = `
<textarea
  autoComplete="false"
  className="mui-textarea-resize-vert mui-mi-input-field"
  cols={15}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  rows={5}
  value="Bill"
/>
`;

exports[`<TextareaInput /> with a stringified value 1`] = `
<textarea
  autoComplete="false"
  className="mui-textarea-resize-vert mui-mi-input-field"
  cols={15}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  rows={5}
  value="4593.3"
/>
`;

exports[`<TextareaInput /> with autocomplete enabled 1`] = `
<textarea
  autoComplete="true"
  className="mui-textarea-resize-vert mui-mi-input-field"
  cols={15}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  rows={5}
  value=""
/>
`;

exports[`<TextareaInput /> with no props 1`] = `
<textarea
  autoComplete="false"
  className="mui-textarea-resize-vert mui-mi-input-field"
  cols={15}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  rows={5}
  value=""
/>
`;

exports[`<TextareaInput /> with value of null 1`] = `
<textarea
  autoComplete="false"
  className="mui-textarea-resize-vert mui-mi-input-field"
  cols={15}
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter text"
  rows={5}
  value=""
/>
`;
